# finallywork

./: pyproject.toml
pythonProject1/: README.md  pyproject.toml  sample.env  transactions_search_result.json
pythonProject1/data/: operations.xls
pythonProject1/src/: main.py  operations_data.json  reports.py  search_log.txt  services.py  transactions_search_result.json  utils.py  views.py
pythonProject1/tests/: test_reports.py  test_services.py  test_views.py
